# kaapana_utility_scripts

./: .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/kaapana_utility_scripts/: __init__.py  cli.py  install_chrom_remote_desktop.sh  quick-build.sh
tests/: __init__.py  test_kaapana_utility_scripts.py
